Create-MultiTier-VPC(LAB)3.template

Region eu-west-1 

AWS CloudFormation Template
You can save the AWS CloudFormation template in an existing S3 bucket in your account by selecting a bucket and clicking on the Save button below. Alternatively, you can cut and paste the template content below and store it locally or in your source control repository. NOTE: If you save the template to an S3 bucket in a different AWS region from the one used to create the template, launching it in the new AWS region will likely fail since the template may have hardcoded values based on the origi [...]





Template Name  S3 Bucket aws-dev-1.billing.reports (eu-west-1) cf-templates-bgl91fuxwy7h-eu-west-1 (eu-west-1) dsl-cloudtrail (eu-west-1) elasticbeanstalk-eu-west-1-118204116182 (eu-west-1) 
  

{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc990fc9fc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "192.168.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "ServiceTeam",
            "Value": "devops@distriubtedsquirrel.co.uk"
          },
          {
            "Key": "ServiceName",
            "Value": "aws infrastructure"
          },
          {
            "Key": "Name",
            "Value": "aws-achaplin-infra-vpc"
          },
          {
            "Key": "ServiceOwner",
            "Value": "adam@distributedsquirrel.co.uk"
          },
          {
            "Key": "Department",
            "Value": "dsl-it"
          }
        ]
      }
    },
    "subnet279a3042": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "192.168.0.0/24",
        "AvailabilityZone": "eu-west-1a",
        "VpcId": {
          "Ref": "vpc990fc9fc"
        },
        "Tags": [
          {
            "Key": "ServiceName",
            "Value": "aws infrastructure"
          },
          {
            "Key": "Name",
            "Value": "aws-achaplin-pubweb-aza-subnet"
          },
          {
            "Key": "Department",
            "Value": "dsl-it"
          },
          {
            "Key": "ServiceOwner",
            "Value": "adam@distributedsquirrel.co.uk"
          },
          {
            "Key": "ServiceTeam",
            "Value": "devops@distriubtedsquirrel.co.uk"
          }
        ]
      }
    },
    "subnetfba750a2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "192.168.2.0/24",
        "AvailabilityZone": "eu-west-1c",
        "VpcId": {
          "Ref": "vpc990fc9fc"
        },
        "Tags": [
          {
            "Key": "Department",
            "Value": "dsl-it"
          },
          {
            "Key": "ServiceTeam",
            "Value": "devops@distriubtedsquirrel.co.uk"
          },
          {
            "Key": "Name",
            "Value": "aws-achaplin-pubweb-azc-subnet"
          },
          {
            "Key": "ServiceOwner",
            "Value": "adam@distributedsquirrel.co.uk"
          },
          {
            "Key": "ServiceName",
            "Value": "aws infrastructure"
          }
        ]
      }
    },
    "subnet9604d4e1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "192.168.1.0/24",
        "AvailabilityZone": "eu-west-1b",
        "VpcId": {
          "Ref": "vpc990fc9fc"
        },
        "Tags": [
          {
            "Key": "ServiceName",
            "Value": "aws infrastructure"
          },
          {
            "Key": "Name",
            "Value": "aws-achaplin-pubweb-azb-subnet"
          },
          {
            "Key": "Department",
            "Value": "dsl-it"
          },
          {
            "Key": "ServiceOwner",
            "Value": "adam@distributedsquirrel.co.uk"
          },
          {
            "Key": "ServiceTeam",
            "Value": "devops@distriubtedsquirrel.co.uk"
          }
        ]
      }
    },
    "igwb82ac2dd": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "ServiceName",
            "Value": "aws infrastructure"
          },
          {
            "Key": "ServiceTeam",
            "Value": "devops@distriubtedsquirrel.co.uk"
          },
          {
            "Key": "ServiceOwner",
            "Value": "adam@distributedsquirrel.co.uk"
          },
          {
            "Key": "Department",
            "Value": "dsl-it"
          },
          {
            "Key": "Name",
            "Value": "aws-achaplin-igw"
          }
        ]
      }
    },
    "doptdacdddb8": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "eu-west-1.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "acl97418ff2": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc990fc9fc"
        },
        "Tags": [
          {
            "Key": "Department",
            "Value": "dsl-it"
          },
          {
            "Key": "ServiceOwner",
            "Value": "adam@distributedsquirrel.co.uk"
          },
          {
            "Key": "ServiceTeam",
            "Value": "devops@distriubtedsquirrel.co.uk"
          },
          {
            "Key": "ServiceName",
            "Value": "aws infrastructure"
          },
          {
            "Key": "Name",
            "Value": "aws-achaplin-public-acl"
          }
        ]
      }
    },
    "acl8b418fee": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc990fc9fc"
        }
      }
    },
    "rtb19d9117c": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc990fc9fc"
        },
        "Tags": [
          {
            "Key": "Department",
            "Value": "dsl-it"
          },
          {
            "Key": "ServiceTeam",
            "Value": "devops@distriubtedsquirrel.co.uk"
          },
          {
            "Key": "Name",
            "Value": "aws-achaplin-public-rtb"
          },
          {
            "Key": "ServiceOwner",
            "Value": "adam@distributedsquirrel.co.uk"
          },
          {
            "Key": "ServiceName",
            "Value": "aws infrastructure"
          }
        ]
      }
    },
    "rtb12d91177": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc990fc9fc"
        }
      }
    },
    "sgkclcitawsdevlinuxmgmtsg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Default Linux Management Security Group",
        "VpcId": "vpc-7d12ed18",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "137.73.0.0/16"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "159.92.0.0/16"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "193.61.200.0/21"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "194.83.136.0/21"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "PortRange": {
          "From": "0",
          "To": "65535"
        },
        "NetworkAclId": {
          "Ref": "acl97418ff2"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "PortRange": {
          "From": "80",
          "To": "80"
        },
        "NetworkAclId": {
          "Ref": "acl97418ff2"
        }
      }
    },
    "acl3": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "101",
        "PortRange": {
          "From": "443",
          "To": "443"
        },
        "NetworkAclId": {
          "Ref": "acl97418ff2"
        }
      }
    },
    "acl4": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "102",
        "PortRange": {
          "From": "22",
          "To": "22"
        },
        "NetworkAclId": {
          "Ref": "acl97418ff2"
        }
      }
    },
    "acl5": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "103",
        "PortRange": {
          "From": "3389",
          "To": "3389"
        },
        "NetworkAclId": {
          "Ref": "acl97418ff2"
        }
      }
    },
    "acl6": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "6",
        "RuleAction": "allow",
        "RuleNumber": "104",
        "PortRange": {
          "From": "1024",
          "To": "65535"
        },
        "NetworkAclId": {
          "Ref": "acl97418ff2"
        }
      }
    },
    "acl7": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl8b418fee"
        }
      }
    },
    "acl8": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl8b418fee"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl97418ff2"
        },
        "SubnetId": {
          "Ref": "subnet9604d4e1"
        }
      }
    },
    "subnetacl2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl97418ff2"
        },
        "SubnetId": {
          "Ref": "subnet279a3042"
        }
      }
    },
    "subnetacl3": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl97418ff2"
        },
        "SubnetId": {
          "Ref": "subnetfba750a2"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc990fc9fc"
        },
        "InternetGatewayId": {
          "Ref": "igwb82ac2dd"
        }
      }
    },
    "subnetroute1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb19d9117c"
        },
        "SubnetId": {
          "Ref": "subnet9604d4e1"
        }
      }
    },
    "subnetroute2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb19d9117c"
        },
        "SubnetId": {
          "Ref": "subnetfba750a2"
        }
      }
    },
    "subnetroute3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb19d9117c"
        },
        "SubnetId": {
          "Ref": "subnet279a3042"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb19d9117c"
        },
        "GatewayId": {
          "Ref": "igwb82ac2dd"
        }
      },
      "DependsOn": "gw1"
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc990fc9fc"
        },
        "DhcpOptionsId": {
          "Ref": "doptdacdddb8"
        }
      }
    }
  },
  "Description": "THis is the template description"
}
